# terraform-eks-webdemo

./: .gitignore  ARM64_ARCHITECTURE_GUIDE.md  AWS_CLEANUP_REPORT.md  BUGFIX_REPORT.md  CLEANUP_EXECUTION_PLAN.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  GITHUB_PROJECT_INFO.md  GITHUB_SSH_SETUP.md  LINK_VERIFICATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_CLEANUP_ANALYSIS.md  PROJECT_FINAL_CLEANUP_REPORT.md  PROJECT_MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SANITIZATION_REPORT.md  SECURITY_SCAN_REPORT.md  TERRAFORM_COMPLIANCE_REPORT.md  TERRAFORM_COMPLIANCE_REPORT_V2.md  TERRAFORM_MIGRATION_GUIDE.md  app.tf  cleanup-summary.md  deploy.sh  deployment-status-report.md  fix-github-push.sh  get-alb-hostname.sh  k8s-manifests.yaml  main.tf  outputs.tf  sync-to-github.sh  terraform.tfvars  test-metadata.py  variables.tf  versions.tf
eks-info-app/: .dockerignore  .gitignore  API_DOCUMENTATION.md  DOCKER_BUILD_GUIDE.md  Dockerfile  README.md  app.py  build.sh  config.py  main.py  push-to-ecr.sh  pyproject.toml  requirements.txt
eks-info-app/routes/: __init__.py  ebs_routes.py  efs_routes.py  home_routes.py  network_routes.py  resources_routes.py  s3_routes.py  scaling_routes.py  storage_routes.py  stress_routes.py
eks-info-app/services/: __init__.py  aws_service.py  environment_service.py  kubernetes_service.py  metrics_service.py  storage_service.py  stress_test_service.py
eks-info-app/storage/: __init__.py  ebs_storage.py  efs_storage.py  s3_storage.py
eks-info-app/templates/: .gitkeep  base.html  ebs.html  efs.html  (+7 more)
(+67 files in other folders)
