[project]
name = "eks-info-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
    "kubernetes>=28.1.0",
    "psutil>=5.9.6",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
